Use chef/ej, not seth/ej.
Signed-off-by: Lincoln Baker <lbaker@chef.io>

--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,7 @@
 
 {deps, [
         {lager, {git, "https://github.com/basho/lager.git", {branch, "master"}}},
-        {ej, {git, "https://github.com/seth/ej.git", {branch, "master"}}},
+        {ej, {git, "https://github.com/chef/ej.git", {branch, "master"}}},
         {jiffy, {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}}
        ]}.
 
